--- a/paper/KuninBogoiavlenskii2024ExpertsAggregating.tex
+++ b/paper/KuninBogoiavlenskii2024ExpertsAggregating.tex
@@ -55,10 +55,10 @@
     [] % short title for page headings, not necessary if a full title fits the headings
     {Influence of hyperparameters on online aggregation with countable experts} % full title
 \author
-    [S.\,M.~Kunin-Bogoiavlenskii] % short list of the authors (<= 3) for page headings, is necessary only if the full list does not fit the headings
+    [S.\,M.~Kunin-Bogoiavlenskij] % short list of the authors (<= 3) for page headings, is necessary only if the full list does not fit the headings
 %S.M. Kunin-Bogoiavlenskii, A.V. Zukhba, and R.D. Zukhba
-    {S.\,M.~Kunin-Bogoiavlenskii, A.\,V.~Zukhba, R.\,D.~Zukhba, and V.\,V.~V’yugin} % full list of the authors, presented in the table of contetns of the issue
-    [S.\,M.~Kunin-Bogoiavlenskii, A.\,V.~Zukhba, R.\,D.~Zukhba] % list of the authors presented in the title page of the article, is necessary only if it differs from the full list of the authors in braces, i.e. '{' and '}'
+    {S.\,M.~Kunin-Bogoiavlenskij, A.\,V.~Zukhba, R.\,D.~Zukhba, and V.\,V.~V’yugin} % full list of the authors, presented in the table of contetns of the issue
+    [S.\,M.~Kunin-Bogoiavlenskij, A.\,V.~Zukhba, R.\,D.~Zukhba] % list of the authors presented in the title page of the article, is necessary only if it differs from the full list of the authors in braces, i.e. '{' and '}'
 \email
     {kunin-bogoiavlenskii.sm@phystech.edu; a\_\_l@mail.ru; zukhba.rd@phystech.edu}
 %\thanks
@@ -89,7 +89,7 @@
 %   \textbf{Concluding Remarks}: One paragraph about the place of the proposed method among existent approaches.
 %               
     \noindent
-        \textbf{Keywords}: \emph{online learning; aggregating algorithm; prediction with experts’ advice; Fixed Share, Mixing Past Posteriors (MPP)}}
+        \textbf{Keywords:} \emph{online learning; aggregating algorithm; prediction with experts’ advice; Fixed Share, Mixing Past Posteriors (MPP)}}
 
 %these fields are filled in by the journal editors
 %\doi{10.21469/22233792}
